Fix GTK compatibility for Stretch release
Fix deprecated and warning from buttons and CSS. Affects
`kano-updater` between others.

--- a/media/CSS/kano_button.css
+++ b/media/CSS/kano_button.css
@@ -1,14 +1,14 @@
-/*
-# kano_button.css
-#
-# Copyright (C) 2014 Kano Computing Ltd.
-# License: http://www.gnu.org/licenses/gpl-2.0.txt GNU General Public License v2
-#
-# The main button that updates the changes made in each level
-*/
+/**
+ * kano_button.css
+ *
+ * Copyright (C) 2014 - 2018 Kano Computing Ltd.
+ * License: http://www.gnu.org/licenses/gpl-2.0.txt GNU GPLv2
+ *
+ * The main button that updates the changes made in each level
+ */
 
 .kano_button {
-    -GtkWidget-focus-line-width: 0;
+    outline-width: 0;
     border-radius: 4px;
     border-color: transparent;
     border-width: 3px;
@@ -22,9 +22,8 @@
 
 .kano_button GtkLabel {
     color: #ffffff;
-    font-family: Bariol;
+    font-family: Bariol Bold;
     font-size: 13pt;
-    font-weight: bold;
 }
 
 .kano_button:disabled {
@@ -154,4 +153,3 @@ GtkButton.blue_background:active {
 .blue_background.loading_kano_button:disabled {
     background: @kano_blue_darker;
 }
-
